@@ -93,9 +93,13 @@ public class GOTStructureEssosFortress extends GOTStructureEssosBase {
 		associateBlockMetaAlias("ROOF_SLAB_INV", roofSlabBlock, roofSlabMeta | 8);
 		associateBlockAlias("ROOF_STAIR", roofStairBlock);
 		associateBlockAlias("GATE_METAL", gateMetalBlock);
+		addBlockMetaAliasOption("GROUND", 1, Blocks.dirt, 1);
+		addBlockMetaAliasOption("GROUND", 2, GOTRegistry.pillar1, 5);
+		addBlockMetaAliasOption("GROUND", 3, GOTRegistry.dirtPath, 0);
 		addBlockMetaAliasOption("GROUND", 5, Blocks.sand, 0);
-		addBlockMetaAliasOption("GROUND", 3, Blocks.dirt, 1);
-		addBlockMetaAliasOption("GROUND", 1, Blocks.sand, 1);
+		addBlockMetaAliasOption("GROUND", 5, Blocks.sandstone, 0);
+		addBlockMetaAliasOption("GROUND", 7, GOTRegistry.brick1, 15);
+		addBlockMetaAliasOption("GROUND", 8, GOTRegistry.brick3, 11);
 		generateStrScan(world, random, 0, 0, 0);
 		placeWallBanner(world, -5, 8, -13, bannerType, 2);
 		placeWallBanner(world, 5, 8, -13, bannerType, 2);
