@@ -2,6 +2,7 @@ package got.common.world.structure.essos.common;
 
 import java.util.Random;
 
+import got.common.database.GOTRegistry;
 import net.minecraft.init.Blocks;
 import net.minecraft.world.World;
 
@@ -48,9 +49,13 @@ public class GOTStructureEssosTraining extends GOTStructureEssosBase {
 		associateBlockAlias("PLANK_STAIR", plankStairBlock);
 		associateBlockMetaAlias("FENCE", fenceBlock, fenceMeta);
 		associateBlockMetaAlias("BEAM", woodBeamBlock, woodBeamMeta);
+		addBlockMetaAliasOption("GROUND", 1, Blocks.dirt, 1);
+		addBlockMetaAliasOption("GROUND", 2, GOTRegistry.pillar1, 5);
+		addBlockMetaAliasOption("GROUND", 3, GOTRegistry.dirtPath, 0);
 		addBlockMetaAliasOption("GROUND", 5, Blocks.sand, 0);
-		addBlockMetaAliasOption("GROUND", 3, Blocks.dirt, 1);
-		addBlockMetaAliasOption("GROUND", 1, Blocks.sand, 1);
+		addBlockMetaAliasOption("GROUND", 5, Blocks.sandstone, 0);
+		addBlockMetaAliasOption("GROUND", 7, GOTRegistry.brick1, 15);
+		addBlockMetaAliasOption("GROUND", 8, GOTRegistry.brick3, 11);
 		generateStrScan(world, random, 0, 0, 0);
 		placeWeaponRack(world, -5, 2, -4, 2, getRandomWeapon(random));
 		placeWeaponRack(world, 5, 2, -4, 2, getRandomWeapon(random));
